# knightslib-public

./: README.md
include/: autonomous.h
include/knights/: display.h
include/knights/autonomous/: pathgen.h  pid.h  profile.h
include/knights/logger/: colors.h
include/knights/robot/: drivetrain.h  position_tracker.h
include/knights/util/: position.h
knights-library/: README.md
knights-library/include/: main.h
knights-library/include/knights/: api.h
knights-library/include/knights/autonomous/: controller.h  path.h  ramsete.h
knights-library/include/knights/driver/: input.h
knights-library/include/knights/logger/: logger.h
knights-library/include/knights/robot/: chassis.h
knights-library/include/knights/util/: calculation.h  timer.h
knights-library/src/: main.cpp
knights-library/src/knights/: display.cpp
knights-library/src/knights/assets/: pix_art_his_field.c
knights-library/src/knights/autonomous/: odometry.cpp
knights-library/src/knights/robot/: chassis.cpp  position_tracker.cpp
knights-library/src/knights/util/: calculation.cpp  position.cpp  route.cpp
src/: autonomous.cpp
src/knights/autonomous/: controller.cpp  pathgen.cpp
src/knights/autonomous/movements/: profile.cpp
src/knights/driver/: input.cpp
src/knights/logger/: logger.cpp
src/knights/robot/: drivetrain.cpp
src/knights/util/: timer.cpp
visual-auton-writer/: README.md
visual-auton-writer/src/: index.html  main.js  styles.css
visual-auton-writer/src-tauri/: Cargo.toml
visual-auton-writer/src-tauri/src/: file.rs  main.rs  menu.rs  util.rs
(+5 files in other folders)
