[package]
name = "visual-auton-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["nik"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ndarray = "0.15"
num = "0.4"
json = "0.12.4"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
